--- a/week02/styles/block-vs-inline.css
+++ b/week02/styles/block-vs-inline.css
@@ -1,7 +1,32 @@
-* {
+ *{
     margin: 0;
     padding: 0;
 }
+main img
+{
+    width:150px;
+    height:auto;
+    border:1px solid steelblue;
+    padding:2px;
+    box-shadow: 0 0 30px gray;
+}
+p
+{
+    padding:0;
+}
+aside
+{
+    width:20em;
+    margin:1em;
+    border:1px solid rgba(0,0,0,0.2);
+    padding: 1em;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+    width:200px;
+    height:auto;
+}
+
 
 body {
     font-size: 20px;
@@ -10,7 +35,7 @@ body {
 
 p,
 div {
-    background-color: beige;
+    background-color: yellow;
     margin: 1rem;
     padding: 1rem;
 }
